fixed center and wrap

--- a/_sass/basically-basic/_layout.scss
+++ b/_sass/basically-basic/_layout.scss
@@ -71,12 +71,6 @@ main {
       align-items: center;
     }
   }
-  .entry-content {
-    @include breakpoint($large) {
-      padding: 0 2rem 0 2rem;
-      width: span(14 of 16);
-    }
-  }
 
   header.intro {
     padding: 0 1rem 0 1rem;
@@ -85,11 +79,19 @@ main {
     align-items: center;
   }
 
-  main.entry-content {
-    padding: 0 1rem 0 1rem;
+  main {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    padding: 0 1rem;
+    max-width: 100%;
+  }
+  
+  main > * {
+    flex: 1 0 300px;
+    margin: 1rem;
+    max-width: calc(100% - 2rem);
   }
 }
 
